--- a/public_html/scss/partials/_aboutSection.scss
+++ b/public_html/scss/partials/_aboutSection.scss
@@ -1,10 +1,7 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/*
-    Created on : Dec 26, 2024, 4:41:51 PM
-    Author     : Mila
-*/
+$about-bg: $white;
 
+
+.about-section{
+    padding: 30px 0;
+    background-color: $about-bg;
+}
