--- a/public_html/scss/partials/_commentSection.scss
+++ b/public_html/scss/partials/_commentSection.scss
@@ -1,10 +1,5 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/*
-    Created on : Dec 26, 2024, 4:42:31 PM
-    Author     : Mila
-*/
-
+$comment-bg: $white;
+.comment-section{
+    padding: 30px 0;
+    background-color: $comment-bg;
+}
