--- a/public_html/scss/partials/_footer.scss
+++ b/public_html/scss/partials/_footer.scss
@@ -1,10 +1,11 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/*
-    Created on : Dec 26, 2024, 4:43:12 PM
-    Author     : Mila
-*/
+$footer-bg: $purple;
+$footer-color: $white;
 
+
+footer{
+    padding: 30px 0;
+    background-color: $footer-bg;
+}
+footer a, footer p{
+    color: $footer-color;
+}
