--- a/public_html/scss/partials/_header.scss
+++ b/public_html/scss/partials/_header.scss
@@ -1,10 +1,81 @@
 $header-bg: $purple;
 $header-link-color: $white;
+$nav-font: $josefin;
+$nav-weight-font: $font-bold;
+$nav-link-hover: $green;
 
 header{
     padding: 30px 0;
     background-color: $header-bg ;
-}
-header a{
-    color: $header-link-color;
-}
+
+    .branding{
+        text-align: center;
+
+        a{
+            color: $header-link-color;
+        }
+    }
+
+    nav{
+        ul{
+            list-style: none;
+            padding-left: 0;
+
+            li{
+                a{
+                    display: block;
+                    padding: 5px 0;
+                    color: $header-link-color;
+                    text-align: center;
+                    font-family: $nav-font;
+                    font-weight: $nav-weight-font;
+                    text-transform: uppercase;
+                    
+                    &:hover, 
+                    &.active{
+                        color: $nav-link-hover;
+                    }
+                }//a end
+            }//li end
+        }//ul end
+    }//nav end
+}//header end
+
+@media(min-width:768px){
+    header{
+        .container{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            
+            nav{
+                ul{
+                    display: flex;
+                    li{
+                        a{
+                           padding: 5px;  
+                        }
+                    }//li end
+                }//ul end 
+                
+            }//nav end
+        } //.container end
+    }//header end
+}//768 end
+
+@media(min-width:992px){
+    header{
+        .container{
+           nav{
+                ul{
+                  li{
+                        a{
+                           padding: 5px 15px;  
+                        }
+                    }//li end
+                }//ul end 
+                
+            }//nav end
+        } //.container end
+    }//header end
+}//992 end
