--- a/public_html/scss/partials/_serviceSection.scss
+++ b/public_html/scss/partials/_serviceSection.scss
@@ -1,10 +1,4 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/*
-    Created on : Dec 26, 2024, 4:42:06 PM
-    Author     : Mila
-*/
 
+.service-section{
+    padding: 30px 0;
+}
