--- a/public_html/scss/partials/_components.scss
+++ b/public_html/scss/partials/_components.scss
@@ -23,31 +23,44 @@ $btn-dark: $black;
 .btn-default{
     @extend %btn; //button default sa @extend nasledi sve sto je napisano u .btn i u html pisemo samo .btn-default ili drugi neki naziv
     //%btn invisible class -pretvra ovu klasu u nevidljivu i tako je u @extend koristi da ostane nevidljiva u css koji se kompajlira. Umesto . stavimo % znak.
-     background-color:  $btn-default;   
+     background-color:  rgba($btn-default, 0.8);   
      color: $btn-default-color;
+     &:hover{
+         background-color: darken($btn-default, 10%); 
+     }
 }
 .btn-danger{
     @extend %btn;
     background-color: $btn-danger;
-    color: $btn-default-color;
+    color: $btn-default-color;&:hover{
+         background-color: darken($btn-danger, 10%); 
+     }
 }
 .btn-success{
     @extend %btn;
     background-color: $btn-success;
-    color: $btn-default-color;
+    color: $btn-default-color;&:hover{
+         background-color: darken($btn-success, 10%); 
+     }
 }
 .btn-warning{
     @extend %btn;
     background-color: $btn-warning;
-    color: $btn-default-color;
+    color: $btn-default-color;&:hover{
+         background-color: darken($btn-warning, 10%); 
+     }
 }
 .btn-info{
     @extend %btn;
     background-color: $btn-info;
-    color: $btn-dark-color;
+    color: $btn-dark-color;&:hover{
+         background-color: darken($btn-info, 10%); 
+     }
 }
 .btn-dark{
     @extend %btn; //extend znaci da klasa npr dark prosiruje klasu .btn tako sto ce uzeti ceo njen stil i na to dodati njen custome still koji smo pisali u .btn-dark 
     background-color: $btn-dark;
-    color: $btn-default-color;
+    color: $btn-default-color;&:hover{
+         background-color: darken($btn-dark, 10%); 
+     }
 }
