--- a/public_html/scss/partials/_footer.scss
+++ b/public_html/scss/partials/_footer.scss
@@ -23,7 +23,7 @@ footer{
             font-weight: $footer-link-font-weight;
             font-size: 1.8rem;
             &:hover, &.active{
-                color: $footer-hover-color;
+                color: lighten(complement($footer-bg), 30%);
             }
         }//a end
     }//ul end
