--- a/public_html/scss/partials/_contactSection.scss
+++ b/public_html/scss/partials/_contactSection.scss
@@ -1,10 +1,5 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/*
-    Created on : Dec 26, 2024, 4:43:03 PM
-    Author     : Mila
-*/
 
+$contact-bg: $white;
+.contact-section{
+    @include styleSection(150px, 150px, $contact-bg);
+}
