--- a/public_html/scss/partials/_footer.scss
+++ b/public_html/scss/partials/_footer.scss
@@ -6,8 +6,9 @@ $footer-link-font-weight: $font-bold;
 
 
 footer{
-    padding: 30px 0;
-    background-color: $footer-bg;
+    //padding: 30px 0;
+    //background-color: $footer-bg;
+    @include styleSection(30px, 30px, $footer-bg);
     ul{ 
         margin-bottom: 4rem;
         padding-left: 0;
