--- a/public_html/scss/partials/_homeSection.scss
+++ b/public_html/scss/partials/_homeSection.scss
@@ -1,10 +1,6 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/*
-    Created on : Dec 26, 2024, 4:41:05 PM
-    Author     : Mila
-*/
 
+$home-bg: $white;
+
+.home-section{
+    @include styleSection(150px, 150px, $home-bg);
+}
