comment and contact section done

--- a/public_html/scss/partials/_commentSection.scss
+++ b/public_html/scss/partials/_commentSection.scss
@@ -1,13 +1,40 @@
 $comment-bg: $white;
 .comment-section{
-   // padding: 30px 0;
+    // padding: 30px 0;
     //background-color: $comment-bg;
-    
+
     @include styleSection(30px, 30px, $comment-bg);
-    
-    .comment-img{
-        img{
-            @include radius(50%);
+
+
+    .comment-list{
+        list-style: none;
+        padding: 0;
+
+        .comment-item{
+            display: flex;
+
+            .comment-img{
+                flex: 0 0 50px;
+                img{
+                    @include radius(50%);
+                }
+            }//.comment-img end
+            .comment-body{
+                padding-left: 10px;
+            }//.comment-body end
+        }//.comment-item end
+    }//.commnet-list end
+
+
+}//.commnet-section end
+
+
+@media(min-width: 768px){
+    .comment-section{
+        .comment-list{
+            .comment-img{
+                flex: 0 0 90px !important;
+            }
         }
     }
 }
