--- a/public_html/scss/partials/_contactSection.scss
+++ b/public_html/scss/partials/_contactSection.scss
@@ -1,5 +1,38 @@
-
+$input-border: 1px solid $black;
 $contact-bg: $white;
 .contact-section{
     @include styleSection(150px, 150px, $contact-bg);
-}
+    background-image: url(assets/contact.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: top center;
+    background-attachment: fixed;
+    
+    h2{
+       text-align: center; 
+    }
+
+    .contact-form{
+        max-width: 500px;
+        width: 100%;
+        margin: 0 auto;
+
+        .form-group{
+            margin-bottom: 1.5rem;
+
+            label{
+                display: block;
+            }
+            .form-control{
+                display: block;
+                width: 100%;
+                border: $input-border;
+                padding: 0 10px; // u ovom slucaju ovo smo uradili da pisanje ne bi krenula od pocetka ivice
+                line-height: 4rem; // a u ovom slucaju smo povecali placeholder; 
+                @include radius(5px);
+            } 
+        }//.form-group end
+
+
+    }//.contact-form end
+}//.contact-section end
